--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Language Switcher -->
     <button id="langSwitch">🇪🇸 Español</button>
-
     <main id="main-content"></main>
 
-    <!-- Popup and Scripts -->
+    <!-- JavaScript Files -->
     <script src="js/popup.js"></script>
     <script src="js/search.js"></script>
     <script src="js/riskCalculation.js"></script>
