local working page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="langSwitch">🇪🇸 Español</button>
+    <!-- Buttons to trigger language switching and popup -->
+    <button id="openPopupButton">Open Instructions</button>
+    <button id="langSwitch">Switch Language</button>
     <main id="main-content"></main>
 
     <!-- JavaScript Files -->
