--- a/index.html
+++ b/index.html
@@ -124,24 +124,17 @@
                 <div class="column">
                     <div class="card legend">
                         <h2 id="risk_legend">Risk Legend</h2>
-                        <div class="legend-item">
-                            <span class="legend-circle" style="background-color: green;"></span>
-                            <span id="legend_very_small">Very Small Risk</span>
-                        </div>
-                        <div class="legend-item">
-                            <span class="legend-circle" style="background-color: yellow;"></span>
-                            <span id="legend_small">Small Risk</span>
-                        </div>
-                        <div class="legend-item">
-                            <span class="legend-circle" style="background-color: orange;"></span>
-                            <span id="legend_big">Big Risk</span>
-                        </div>
-                        <div class="legend-item">
-                            <span class="legend-circle" style="background-color: red;"></span>
-                            <span id="legend_very_big">Very Big Risk</span>
+                        <div class="legend-bar-container">
+                            <div class="legend-bar">
+                                <div class="legend-section" id="legend_very_small">Very Small Risk</div>
+                                <div class="legend-section" id="legend_small">Small Risk</div>
+                                <div class="legend-section" id="legend_big">Big Risk</div>
+                                <div class="legend-section" id="legend_very_big">Very Big Risk</div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
 
             </div>
 
@@ -152,7 +145,7 @@
 
         <!-- Bottom banner -->
         <div class="bottom-banner">
-            <img src="assets/images/bottom-banner.jpg" alt="Bottom Banner">
+            <img src="/assets/images/bottom-banner.jpg" alt="Bottom Banner">
         </div>
 
     </main>
