--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <option value="es">Español</option>
                 </select>
                 <br>
-                <button id="closePopup">Close</button>
+                <button id="popup_button">Close</button>
             </div>
         </div>
 
